# UP301_sdk

./: .gitignore  README.md
UP301_E34/CMSIS_NN-metal/Include/: arm_nn_test.h
UP301_E34/CMSIS_dsp_metal/Include/: arm_math.h
UP301_E34/CMSIS_dsp_metal/src/BasicMathFunctions/: BasicMathFunctions.c  BasicMathFunctionsF16.c  arm_dot_prod_q15.c  arm_dot_prod_q31.c
UP301_E34/CMSIS_dsp_metal/src/BayesFunctions/: BayesFunctions.c  BayesFunctionsF16.c
UP301_E34/CMSIS_dsp_metal/src/CommonTables/: CommonTables.c  CommonTablesF16.c
UP301_E34/CMSIS_dsp_metal/src/ComplexMathFunctions/: ComplexMathFunctions.c  ComplexMathFunctionsF16.c
UP301_E34/CMSIS_dsp_metal/src/ControllerFunctions/: ControllerFunctions.c
UP301_E34/CMSIS_dsp_metal/src/DistanceFunctions/: DistanceFunctions.c  DistanceFunctionsF16.c
UP301_E34/CMSIS_dsp_metal/src/FastMathFunctions/: FastMathFunctions.c  FastMathFunctionsF16.c  arm_sqrt_q15.c  arm_sqrt_q31.c
UP301_E34/CMSIS_dsp_metal/src/FilteringFunctions/: FilteringFunctions.c  FilteringFunctionsF16.c
UP301_E34/CMSIS_dsp_metal/src/InterpolationFunctions/: InterpolationFunctions.c  InterpolationFunctionsF16.c
UP301_E34/CMSIS_dsp_metal/src/MatrixFunctions/: MatrixFunctions.c  MatrixFunctionsF16.c  _arm_mat_mult_neon.c
UP301_E34/CMSIS_dsp_metal/src/QuaternionMathFunctions/: QuaternionMathFunctions.c
UP301_E34/CMSIS_dsp_metal/src/SVMFunctions/: SVMFunctions.c  SVMFunctionsF16.c
UP301_E34/CMSIS_dsp_metal/src/StatisticsFunctions/: StatisticsFunctions.c  StatisticsFunctionsF16.c
UP301_E34/CMSIS_dsp_metal/src/SupportFunctions/: SupportFunctions.c  SupportFunctionsF16.c
UP301_E34/CMSIS_dsp_metal/src/TransformFunctions/: TransformFunctions.c  arm_bitreversal2.c  arm_rfft_q15.c  arm_rfft_q31.c
UP301_E34/CMSIS_dsp_metal/src/WindowFunctions/: WindowFunctions.c  arm_bartlett_f32.c  arm_welch_f32.c
UP301_E34/FreeRTOS-metal/FreeRTOS-Kernel/portable/Common/: mpu_wrappers.c
UP301_E34/LiteRT/tensorflow/lite/: array.cc  array.h
UP301_E34/LiteRT/tensorflow/lite/kernels/: kernel_util.cc
UP301_E34/LiteRT/tensorflow/lite/micro/: debug_log.cc  micro_testing.h
UP301_E34/Tools/GUIPINMUX/: WpfPinMux.deps.json
UP301_E34/bsp/: metal-inline.h  metal-platform.h  metal.h  rom_debug.h  upt_doxymain.c  upt_doxymod.c  upt_scuBitMap.h  upt_scuRegMap.h  upt_up301.h
UP301_E34/bsp/Trina-pi/: openocd.cfg  openocd_E34_only_ftdi2232.cfg  openocd_E34_only_jlink.cfg  openocd_dual_ftdi2232.cfg  openocd_dual_jlink.cfg
UP301_E34/bsp/UP201_EVB/: openocd.cfg  openocd_E34_only_ftdi2232.cfg  openocd_dual_ftdi2232.cfg
UP301_E34/bsp/UP301_EVB/: openocd_E34_only_jlink.cfg
UP301_E34/bsp/lds_template/: mcuboot.directxip_2m_debug.lds  mcuboot.directxip_8m_debug.lds  mcuboot.ramload_2m_debug.lds  mcuboot.ramload_8m_debug.lds  mcuboot.swap_overwrite_2m_debug.lds  mcuboot.swap_overwrite_8m_debug.lds
UP301_E34/demo/Bootloader/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
UP301_E34/demo/Bootloader/include/: rom_debug.h  upt_up301_e21.h
UP301_E34/demo/Bootloader/project_file/: metal.default_load_sram.lds  metal.default_load_sram_2.lds
UP301_E34/demo/Bootloader/src/: Board_pinmux.c  main.c
UP301_E34/demo/Hello/: CMakePresets.json  post_build.cmake  riscv-toolchain.cmake
UP301_E34/demo/Hello/include/: upt_up301_e21.h
UP301_E34/demo/Hello/project_file/: metal.default.lds  metal.default_no_header.lds
UP301_E34/demo/Hello/src/: main.c
UP301_E34/freedom-metal/metal/: adc.h  cmsis_nn.h  compiler.h  cpu.h  csr.h  dma.h  dsp.h  gpio.h  gtimer.h  hpm.h  i2c.h  i2s.h  img.h  init.h  interrupt.h  io.h  itim.h  lock.h  memory.h  ospi.h  pdm.h  pmp.h  privilege.h  pwm.h  rtc.h  scrub.h  shutdown.h  sif.h  spi.h  timer.h  ts.h  tty.h  uart.h  udl.h  upt_handler.h  upt_init.h  upt_isr.h  upt_powmod.h  upt_sysctrl.h  upt_systimer.h  (+1 more)
UP301_E34/freedom-metal/metal/drivers/: reg_sp804.h  reg_wdt.h  riscv_clint0.h  riscv_cpu.h  riscv_plic0.h  sifive_buserror0.h  sifive_clic0.h  sifive_global-external-interrupts0.h  sifive_local-external-interrupts0.h  sifive_test0.h  ucb_htif0.h  up_adc.h  up_dma.h  up_dsp.h  up_fft.h  up_gpio.h  up_gtimer.h  up_i2c.h  up_i2s.h  up_img.h  up_ospi.h  up_pdm.h  up_pwm.h  up_rtc.h  up_sif.h  up_spi.h  up_ts.h  up_uart.h  up_udl.h  up_wdt.h  upt_fft.h  upt_fixp_fft.h  upt_rtcm_gpio.h
UP301_E34/freedom-metal/metal/nema_dc/include/: nema_blender.h  nema_blender_intern.h  nema_cmdlist.h  nema_core.h  nema_dc.h  nema_dc_dsi.h  nema_dc_hal.h  nema_dc_intern.h  nema_dc_mipi.h  (+20 more)
UP301_E34/freedom-metal/src/: adc.c  cpu.c  dma.c  dsp.c  entry.S  gpio.c  gtimer.c  hpm.c  i2c.c  i2s.c  img.c  init.c  interrupt.c  lock.c  memory.c  ospi.c  pdm.c  pmp.c  privilege.c  pwm.c  rtc.c  scrub.S  shutdown.c  sif.c  spi.c  synchronize_harts.c  timer.c  trap.S  ts.c  tty.c  uart.c  udl.c  up301_tables.c  upt_asm_handler.S  upt_fixp_fft.c  upt_floatp_fft.c  upt_init.c  upt_isr.c  upt_powmod.c  upt_systimer.c  (+2 more)
UP301_E34/freedom-metal/src/gloss/: crt0.S  nanosleep.c  sys_access.c  sys_chdir.c  sys_chmod.c  sys_chown.c  sys_clock_gettime.c  sys_close.c  sys_execve.c  sys_exit.c  sys_faccessat.c  sys_fork.c  sys_fstat.c  sys_fstatat.c  sys_ftime.c  sys_getcwd.c  sys_getpid.c  sys_gettimeofday.c  sys_isatty.c  sys_kill.c  sys_link.c  sys_lseek.c  sys_lstat.c  sys_open.c  sys_openat.c  sys_read.c  sys_sbrk.c  sys_stat.c  sys_sysconf.c  sys_times.c  sys_unlink.c  sys_utime.c  sys_wait.c  sys_write.c
UP301_E34/lvgl/: lv_version.h  lvgl.h
UP301_E34/lvgl/src/: lv_api_map_v8.h  lv_init.c  lvgl_private.h
UP301_E34/lvgl/src/draw/: lv_draw_arc.h  lv_draw_image.h
UP301_E34/lvgl/src/font/: lv_binfont_loader.c  lv_font_dejavu_16_persian_hebrew.c  lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_32.c  lv_font_montserrat_48.c
UP301_E34/lvgl/src/misc/: lv_profiler_builtin.c
UP301_E34/mcuboot/bootutil/src/: keys.c  loader.c  ram_load.c  tlv.c
UP301_E34/mcuboot/common/: internal_flash.c  mcuboot_port.c
(+124 files in other folders)
